--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ rand_seeder = "0.3.0"
 refinery = { version = "0.8.14", features = ["rusqlite", "rusqlite-bundled"] }
 rusqlite = "0.31.0"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-unwrap = "1.0.1"
