--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
+colored = "2.1.0"
 dotenvy = "0.15.7"
 lettre = { version = "0.11.10", features = ["smtp-transport"] }
 rand = "0.8.5"
