--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
 colored = "2.1.0"
+csv = "1.3.0"
 dotenvy = "0.15.7"
 lettre = { version = "0.11.10", features = ["smtp-transport"] }
 rand = "0.8.5"
@@ -13,6 +14,7 @@ rand_chacha = "0.3.1"
 rand_seeder = "0.3.0"
 refinery = { version = "0.8.14", features = ["rusqlite", "rusqlite-bundled"] }
 rusqlite = "0.31.0"
+serde = { version = "1.0.214", features = ["derive"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-unwrap = "1.0.1"
